fix: image cover products, categories
