# app/Domain/Entities/Product.php
@@ -12,5 +12,6 @@ class Product
         public ?string $description = null,
         public array $attributes = [],
         public ?string $categoryFullPath = null,
+        public ?string $coverUrl = null,
     ) {}
 }
